# MediatorDesignPattern

./: .gitignore  CMakeLists.txt  Main.cpp
include/: BaseComponent.hpp  ConcreteComponent.hpp  ConcreteMediator.hpp  SecondConcreteComponent.hpp
interface/: IMediator.hpp
sources/: BaseComponent.cpp  ConcreteComponent.cpp  ConcreteMediator.cpp  SecondConcreteComponent.cpp
tests/: CMakeLists.txt  ConcreteComponentTest.cpp  ConcreteMediatorTest.cpp  IMediatorMock.hpp  SecondConcreteComponentTest.cpp  SourceMock.cpp
